updata:docs about api
